Implemented audit_log functionality

--- a/stockProject/stockApp/templates/base.html
+++ b/stockProject/stockApp/templates/base.html
@@ -83,6 +83,8 @@
                                 <li><a href="/users" aria-expanded="true">
                                         <i class="ti-user"></i><span>Users</span></a></li>
                                 <li>
+                                <li><a href="/logs" aria-expanded="true">
+                                        <i class="ti-layout-media-overlay-alt-2"></i><span>Audit Logs</span></a></li>
                                 <li><a href="/settings" aria-expanded="true">
                                         <i class="ti-settings"></i><span>Settings</span></a></li>
                                 <li>
