--- a/stockProject/stockApp/templates/base.html
+++ b/stockProject/stockApp/templates/base.html
@@ -61,16 +61,8 @@
                                 <li><a href="/products" aria-expanded="true">
                                         <i class="ti-dropbox"></i><span>Products</span></a></li>
                                 <li>
-                                <li>
-                                    <a href="javascript:void(0)" aria-expanded="true"><i
-                                            class="ti-layout-sidebar-left"></i>
-                                        <span>Orders</span>
-                                    </a>
-                                    <ul class="collapse">
-                                        <li><a href="/orders">View Orders</a></li>
-                                        <li><a href="/">Add Order</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="/orders" aria-expanded="true">
+                                        <i class="ti-layout-sidebar-left"></i><span>Orders</span></a></li>
                                 <li><a href="/stores" aria-expanded="true">
                                         <i class="ti-home"></i><span>Stores</span></a></li>
                                 <li><a href="/categories" aria-expanded="true">
